tests/fixtures/invalid/multiple-classes-per-file.php
<?php

declare(strict_types=1);

namespace Invalid;

class Foo
{
}

class Bar
{
}
